fable/test/syntax_error/closing_parenthesis_without_matching.f
      program p
      a = 0)
      end
